@@ -16,7 +16,6 @@
  */
 package org.apache.sling.auth.oauth_client;
 
-import static java.lang.String.format;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
@@ -80,6 +79,7 @@ class AuthorizationCodeFlowIT {
     private static final String CRYPTO_SERVICE_PID = JasyptStandardPbeStringCryptoService.class.getName();
     
     private static final String OIDC_CONFIG_PID = OidcConnectionImpl.class.getName();
+    private static final int MAX_RETRY = 10;
     private static SupportBundle supportBundle;
 
     private static final String OIDC_AUTHENTICATION_HANDLER_PID = "org.apache.sling.auth.oauth_client.impl.OidcAuthenticationHandler";
@@ -87,17 +87,15 @@ class AuthorizationCodeFlowIT {
     private static final String SYNC_HANDLER_PID = "org.apache.jackrabbit.oak.spi.security.authentication.external.impl.DefaultSyncHandler";
     private static final String EXTERNAL_LOGIN_MODULE_FACTORY_PID = "org.apache.jackrabbit.oak.spi.security.authentication.external.impl.ExternalLoginModuleFactory";
     public static final String TEST_PATH = "/content/test-1";
-//    public static final String TEST_PATH = "/system/sling/login";
     private KeycloakContainer keycloak;
     private SlingClient sling;
     private SlingClient slingUser;
 
     private int keycloakPort;
 
-    private List<String> configPidsToCleanup = new ArrayList<>();
+    private final List<String> configPidsToCleanup = new ArrayList<>();
     private int slingPort;
 
-    
     @BeforeAll
     static void createSupportBundle(@TempDir Path tempDir) throws IOException {
         
@@ -198,7 +196,7 @@ class AuthorizationCodeFlowIT {
         String userPath = getUserPath(sling, sling.getUser());
         sling.deletePath(userPath + "/oauth-tokens/" + oidcConnectionName, 200);
         sling.doGet(userPath + "/oauth-tokens/" + oidcConnectionName, 404);
-        
+
         // kick off oidc auth
         SlingHttpResponse entryPointResponse = sling.doGet("/system/sling/oauth/entry-point", List.of(new BasicNameValuePair("c", oidcConnectionName)), 302);
         Header locationHeader = entryPointResponse.getFirstHeader("location");
@@ -215,12 +213,12 @@ class AuthorizationCodeFlowIT {
         String oauthRequestKey = oauthCookie.get().getValue();
         
         // load login form from keycloak
-        HttpClient keycloak = HttpClient.newHttpClient();        
+        HttpClient httpClient = HttpClient.newHttpClient();        
         HttpRequest renderLoginFormRequest = HttpRequest.newBuilder().uri(URI.create(locationHeaderValue)).build();
-        HttpResponse<Stream<String>> renderLoginFormResponse = keycloak.send(renderLoginFormRequest, BodyHandlers.ofLines());
+        HttpResponse<Stream<String>> renderLoginFormResponse = httpClient.send(renderLoginFormRequest, BodyHandlers.ofLines());
         List<String> matchingFormLines = renderLoginFormResponse.body()
             .filter( line -> line.contains("id=\"kc-form-login\""))
-            .collect(Collectors.toList());
+            .toList();
         assertThat(matchingFormLines).as("lines matching form id").singleElement();
         String formLine = matchingFormLines.get(0);
         int actionAttrStart = formLine.indexOf("action=\"") + "action=\"".length();
@@ -238,9 +236,9 @@ class AuthorizationCodeFlowIT {
         HttpRequest.Builder authenticateRequest = HttpRequest.newBuilder(URI.create(actionAttr))
                 .POST(BodyPublishers.ofString(requestBody))
                 .header("content-type", "application/x-www-form-urlencoded");
-        authFormRequestCookies.stream().forEach( cookie -> authenticateRequest.header("cookie", cookie));
+        authFormRequestCookies.forEach(cookie -> authenticateRequest.header("cookie", cookie));
         
-        HttpResponse<String> authenticateResponse = keycloak.send(authenticateRequest.build(), BodyHandlers.ofString());
+        HttpResponse<String> authenticateResponse = httpClient.send(authenticateRequest.build(), BodyHandlers.ofString());
         System.out.println(authenticateResponse.body());
         Optional<String> authResponseLocationHeader = authenticateResponse.headers().firstValue("location");
         assertThat(authResponseLocationHeader).as("Authentication response header").isPresent();
@@ -252,7 +250,7 @@ class AuthorizationCodeFlowIT {
                 var parts = s.split("=");
                 return (NameValuePair) new BasicNameValuePair(parts[0], URLDecoder.decode(parts[1], StandardCharsets.UTF_8));
             })
-            .collect(Collectors.toList());
+            .toList();
         
         List<Header> headers = new ArrayList<>();
         headers.add(new BasicHeader("Cookie", "sling.oauth-request-key=" + oauthRequestKey));
@@ -267,7 +265,7 @@ class AuthorizationCodeFlowIT {
                 new BasicNameValuePair("cryptoServiceName", "sling-oauth")
         ));
         
-        System.err.println(format("Decrypting %s ...", accesToken));
+        System.err.printf("Decrypting %s ...%n", accesToken);
         
         String decryptedToken = sling.doPost("/system/sling/decrypt",  postBody, 200).getContent();
         // validate that the JWT is valid; we trust what keycloak has returned but just want to ensure that
@@ -415,8 +413,21 @@ class AuthorizationCodeFlowIT {
         // Create a user-agent NameValues to simulate a browser and add it to a list of headers to be sent with the request
         Header userAgentHeader = new BasicHeader("User-Agent", "Mozilla/5.0");
 
-        SlingHttpResponse entryPointResponse = slingUser.doGet(TEST_PATH+".json", null, List.of(userAgentHeader), 302);
-        Header locationHeader = entryPointResponse.getFirstHeader("location");
+        SlingHttpResponse entryPointResponse = null;
+        Header locationHeader = null;
+        // Retry the request a few times to ensure that the osgi configuration have been applied
+        for (int count = 0; count < MAX_RETRY; count++) {
+
+            entryPointResponse = slingUser.doGet(TEST_PATH + ".json", null, List.of(userAgentHeader), 302);
+            locationHeader = entryPointResponse.getFirstHeader("location");
+            if (locationHeader.getValue().startsWith("http://localhost:" + keycloakPort)) {
+                // If the location header starts with the keycloak port, we can break out of the loop
+                break;
+            }
+            // Otherwise, we wait for a while and retry
+            Thread.sleep(100);
+
+        }
         assertThat(locationHeader.getElements()).as("Location header value from entry-point request")
                 .singleElement().asString().startsWith("http://localhost:" + keycloakPort);
         String locationHeaderValue = locationHeader.getValue();
@@ -448,12 +459,12 @@ class AuthorizationCodeFlowIT {
         }
 
         // load login form from keycloak
-        HttpClient keycloak = HttpClient.newHttpClient();
+        HttpClient httpClient = HttpClient.newHttpClient();
         HttpRequest renderLoginFormRequest = HttpRequest.newBuilder().uri(URI.create(locationHeaderValue)).build();
-        HttpResponse<Stream<String>> renderLoginFormResponse = keycloak.send(renderLoginFormRequest, BodyHandlers.ofLines());
+        HttpResponse<Stream<String>> renderLoginFormResponse = httpClient.send(renderLoginFormRequest, BodyHandlers.ofLines());
         List<String> matchingFormLines = renderLoginFormResponse.body()
                 .filter( line -> line.contains("id=\"kc-form-login\""))
-                .collect(Collectors.toList());
+                .toList();
         assertThat(matchingFormLines).as("lines matching form id").singleElement();
         String formLine = matchingFormLines.get(0);
         int actionAttrStart = formLine.indexOf("action=\"") + "action=\"".length();
@@ -472,9 +483,9 @@ class AuthorizationCodeFlowIT {
         HttpRequest.Builder authenticateRequest = HttpRequest.newBuilder(URI.create(actionAttr))
                 .POST(BodyPublishers.ofString(requestBody))
                 .header("content-type", "application/x-www-form-urlencoded");
-        authFormRequestCookies.stream().forEach( cookie -> authenticateRequest.header("cookie", cookie));
+        authFormRequestCookies.forEach(cookie -> authenticateRequest.header("cookie", cookie));
 
-        HttpResponse<String> authenticateResponse = keycloak.send(authenticateRequest.build(), BodyHandlers.ofString());
+        HttpResponse<String> authenticateResponse = httpClient.send(authenticateRequest.build(), BodyHandlers.ofString());
         System.out.println(authenticateResponse.body());
 
         // Assert response from keycloak
@@ -488,7 +499,7 @@ class AuthorizationCodeFlowIT {
                     var parts = s.split("=");
                     return (NameValuePair) new BasicNameValuePair(parts[0], URLDecoder.decode(parts[1], StandardCharsets.UTF_8));
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         List<Header> headers = new ArrayList<>();
         headers.add(new BasicHeader("Cookie", OAuthStateManager.COOKIE_NAME_REQUEST_KEY + "=" + oauthRequestKeyCookie.get().getValue()));
